<?xml version="1.0"?>
<package format="2">
  <name>vigir_interactive_marker_pose_server</name>
  <version>0.0.0</version>
  <description>The vigir_interactive_marker_pose_server package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>

  <export>
  </export>
</package>
